--- a/shotchart/LaunchScreen.storyboard
+++ b/shotchart/LaunchScreen.storyboard
@@ -14,17 +14,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loading-screen" translatesAutoresizingMaskIntoConstraints="NO" id="Kz1-Yy-1z1">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchscreen" translatesAutoresizingMaskIntoConstraints="NO" id="launch-image">
+                                <rect key="frame" x="0" y="0" width="393" height="852"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.01568627450980392" green="0.12549019607843137" blue="0.28235294117647058" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Kz1-Yy-1z1" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="top1"/>
-                            <constraint firstItem="Kz1-Yy-1z1" firstAttribute="bottom" secondItem="Ze5-6b-2t3" secondAttribute="bottom" id="bot1"/>
-                            <constraint firstItem="Kz1-Yy-1z1" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="lea1"/>
-                            <constraint firstItem="Kz1-Yy-1z1" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" id="tra1"/>
+                            <constraint firstItem="launch-image" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="top1"/>
+                            <constraint firstItem="launch-image" firstAttribute="bottom" secondItem="Ze5-6b-2t3" secondAttribute="bottom" id="bot1"/>
+                            <constraint firstItem="launch-image" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="lea1"/>
+                            <constraint firstItem="launch-image" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" id="tra1"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -34,6 +34,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="loading-screen" width="393" height="852"/>
+        <image name="launchscreen" width="1024" height="1024"/>
     </resources>
 </document>
